feat(i18n): Complete internationalization of message analytics dialog
- Fix message_analytics_dialog.py to use proper i18n manager (self.i18n.tr())
- Add 59 missing translation keys to all language files
- Ensure consistent 605 keys across en.json, es.json, and pt.json
- Add comprehensive analytics translations for:
  * UI elements (email, whatsapp, channel, all, none, time, recipient, status, template)
  * Analytics features (analytics_error, generate_report, export_report, success_rate_over_time)
  * Data management (export_logs, cleanup_data, database_info, confirm_deletion)
  * User feedback (export_complete, cleanup_complete, charts_not_available)

Resolves all translation warnings and ensures message analytics dialog
works properly in English, Spanish, and Portuguese languages.

--- a/src/multichannel_messaging/localization/en.json
+++ b/src/multichannel_messaging/localization/en.json
@@ -623,5 +623,70 @@
   "advanced": "Advanced",
   "basic": "Basic",
   "custom": "Custom",
-  "default": "Default"
+  "default": "Default",
+
+  "_comment_missing_analytics_keys": "=== MISSING ANALYTICS KEYS ===",
+  
+  "none": "None",
+  "success_rate_over_time": "Success Rate Over Time",
+  "success_rate_percent": "Success Rate %",
+  "channel_usage": "Channel Usage",
+  "email": "Email",
+  "whatsapp": "WhatsApp",
+  "time": "Time",
+  "channel": "Channel",
+  "recipient": "Recipient",
+  "status": "Status",
+  "template": "Template",
+  "days": "Days",
+  "all": "All",
+  "sent": "Sent",
+  "export_logs": "Export Logs",
+  "timestamp": "Timestamp",
+  "company": "Company",
+  "error": "Error",
+  "message_id": "Message ID",
+  "session_id": "Session ID",
+  "start_time": "Start Time",
+  "end_time": "End Time",
+  "total": "Total",
+  "successful": "Successful",
+  "session_details": "Session Details",
+  "analysis_period": "Analysis Period",
+  "generate_report": "Generate Report",
+  "export_report": "Export Report",
+  "click_generate_report": "Click 'Generate Report' to view analytics",
+  "data_export": "Data Export",
+  "export_format": "Export Format",
+  "json": "JSON",
+  "csv": "CSV",
+  "export_all_data": "Export All Data",
+  "delete_data_older_than": "Delete data older than",
+  "cleanup_data": "Cleanup Data",
+  "database_info": "Database Information",
+  "active": "Active",
+  "generating_analytics": "Generating analytics report...",
+  "overview_analytics": "Overview",
+  "avg_messages_per_session": "Avg Messages/Session",
+  "analytics_error": "Analytics Error",
+  "analytics_error_message": "Failed to generate analytics: {error}",
+  "export_message_logs": "Export Message Logs",
+  "json_files": "JSON Files (*.json);;CSV Files (*.csv)",
+  "export_complete": "Export Complete",
+  "export_complete_message": "Logs exported to {filename}",
+  "export_error": "Export Error",
+  "export_error_message": "Failed to export logs: {error}",
+  "export_all_data_title": "Export All Data",
+  "data_exported_message": "Data exported to {filename}",
+  "data_export_error": "Failed to export data: {error}",
+  "confirm_deletion": "Confirm Deletion",
+  "confirm_deletion_message": "Are you sure you want to delete all data older than {days} days?\n\nThis action cannot be undone.",
+  "cleanup_complete": "Cleanup Complete",
+  "cleanup_complete_message": "Deleted {count} old records.",
+  "cleanup_error": "Cleanup Error",
+  "cleanup_error_message": "Failed to cleanup data: {error}",
+  "database_not_found": "Database not found",
+  "database_info_error": "Error loading database info: {error}",
+  "charts_not_available": "Charts not available - install PySide6-Addons for chart support",
+  "auto_refresh": "Auto Refresh (30s)"
 }
