--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -622,5 +622,70 @@
   "advanced": "Avanzado",
   "basic": "Básico",
   "custom": "Personalizado",
-  "default": "Predeterminado"
+  "default": "Predeterminado",
+
+  "_comment_missing_analytics_keys": "=== CLAVES DE ANALÍTICAS FALTANTES ===",
+  
+  "none": "Ninguno",
+  "success_rate_over_time": "Tasa de Éxito a lo Largo del Tiempo",
+  "success_rate_percent": "Tasa de Éxito %",
+  "channel_usage": "Uso de Canales",
+  "email": "Email",
+  "whatsapp": "WhatsApp",
+  "time": "Hora",
+  "channel": "Canal",
+  "recipient": "Destinatario",
+  "status": "Estado",
+  "template": "Plantilla",
+  "days": "Días",
+  "all": "Todos",
+  "sent": "Enviado",
+  "export_logs": "Exportar Registros",
+  "timestamp": "Marca de Tiempo",
+  "company": "Empresa",
+  "error": "Error",
+  "message_id": "ID del Mensaje",
+  "session_id": "ID de Sesión",
+  "start_time": "Hora de Inicio",
+  "end_time": "Hora de Fin",
+  "total": "Total",
+  "successful": "Exitoso",
+  "session_details": "Detalles de la Sesión",
+  "analysis_period": "Período de Análisis",
+  "generate_report": "Generar Reporte",
+  "export_report": "Exportar Reporte",
+  "click_generate_report": "Haga clic en 'Generar Reporte' para ver analíticas",
+  "data_export": "Exportar Datos",
+  "export_format": "Formato de Exportación",
+  "json": "JSON",
+  "csv": "CSV",
+  "export_all_data": "Exportar Todos los Datos",
+  "delete_data_older_than": "Eliminar datos anteriores a",
+  "cleanup_data": "Limpiar Datos",
+  "database_info": "Información de la Base de Datos",
+  "active": "Activo",
+  "generating_analytics": "Generando reporte de analíticas...",
+  "overview_analytics": "Resumen",
+  "avg_messages_per_session": "Promedio Mensajes/Sesión",
+  "analytics_error": "Error de Analíticas",
+  "analytics_error_message": "Error al generar analíticas: {error}",
+  "export_message_logs": "Exportar Registros de Mensajes",
+  "json_files": "Archivos JSON (*.json);;Archivos CSV (*.csv)",
+  "export_complete": "Exportación Completa",
+  "export_complete_message": "Registros exportados a {filename}",
+  "export_error": "Error de Exportación",
+  "export_error_message": "Error al exportar registros: {error}",
+  "export_all_data_title": "Exportar Todos los Datos",
+  "data_exported_message": "Datos exportados a {filename}",
+  "data_export_error": "Error al exportar datos: {error}",
+  "confirm_deletion": "Confirmar Eliminación",
+  "confirm_deletion_message": "¿Está seguro de que desea eliminar todos los datos anteriores a {days} días?\n\nEsta acción no se puede deshacer.",
+  "cleanup_complete": "Limpieza Completa",
+  "cleanup_complete_message": "Se eliminaron {count} registros antiguos.",
+  "cleanup_error": "Error de Limpieza",
+  "cleanup_error_message": "Error al limpiar datos: {error}",
+  "database_not_found": "Base de datos no encontrada",
+  "database_info_error": "Error al cargar información de la base de datos: {error}",
+  "charts_not_available": "Gráficos no disponibles - instale PySide6-Addons para soporte de gráficos",
+  "auto_refresh": "Actualización Automática (30s)"
 }
