--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -622,5 +622,70 @@
   "advanced": "Avançado",
   "basic": "Básico",
   "custom": "Personalizado",
-  "default": "Padrão"
+  "default": "Padrão",
+
+  "_comment_missing_analytics_keys": "=== CHAVES DE ANÁLISES FALTANTES ===",
+  
+  "none": "Nenhum",
+  "success_rate_over_time": "Taxa de Sucesso ao Longo do Tempo",
+  "success_rate_percent": "Taxa de Sucesso %",
+  "channel_usage": "Uso de Canais",
+  "email": "Email",
+  "whatsapp": "WhatsApp",
+  "time": "Hora",
+  "channel": "Canal",
+  "recipient": "Destinatário",
+  "status": "Status",
+  "template": "Modelo",
+  "days": "Dias",
+  "all": "Todos",
+  "sent": "Enviado",
+  "export_logs": "Exportar Registros",
+  "timestamp": "Carimbo de Tempo",
+  "company": "Empresa",
+  "error": "Erro",
+  "message_id": "ID da Mensagem",
+  "session_id": "ID da Sessão",
+  "start_time": "Hora de Início",
+  "end_time": "Hora de Fim",
+  "total": "Total",
+  "successful": "Bem-sucedido",
+  "session_details": "Detalhes da Sessão",
+  "analysis_period": "Período de Análise",
+  "generate_report": "Gerar Relatório",
+  "export_report": "Exportar Relatório",
+  "click_generate_report": "Clique em 'Gerar Relatório' para ver análises",
+  "data_export": "Exportar Dados",
+  "export_format": "Formato de Exportação",
+  "json": "JSON",
+  "csv": "CSV",
+  "export_all_data": "Exportar Todos os Dados",
+  "delete_data_older_than": "Excluir dados anteriores a",
+  "cleanup_data": "Limpar Dados",
+  "database_info": "Informações do Banco de Dados",
+  "active": "Ativo",
+  "generating_analytics": "Gerando relatório de análises...",
+  "overview_analytics": "Visão Geral",
+  "avg_messages_per_session": "Média Mensagens/Sessão",
+  "analytics_error": "Erro de Análises",
+  "analytics_error_message": "Falha ao gerar análises: {error}",
+  "export_message_logs": "Exportar Registros de Mensagens",
+  "json_files": "Arquivos JSON (*.json);;Arquivos CSV (*.csv)",
+  "export_complete": "Exportação Completa",
+  "export_complete_message": "Registros exportados para {filename}",
+  "export_error": "Erro de Exportação",
+  "export_error_message": "Falha ao exportar registros: {error}",
+  "export_all_data_title": "Exportar Todos os Dados",
+  "data_exported_message": "Dados exportados para {filename}",
+  "data_export_error": "Falha ao exportar dados: {error}",
+  "confirm_deletion": "Confirmar Exclusão",
+  "confirm_deletion_message": "Tem certeza de que deseja excluir todos os dados anteriores a {days} dias?\n\nEsta ação não pode ser desfeita.",
+  "cleanup_complete": "Limpeza Completa",
+  "cleanup_complete_message": "Excluídos {count} registros antigos.",
+  "cleanup_error": "Erro de Limpeza",
+  "cleanup_error_message": "Falha ao limpar dados: {error}",
+  "database_not_found": "Banco de dados não encontrado",
+  "database_info_error": "Erro ao carregar informações do banco de dados: {error}",
+  "charts_not_available": "Gráficos não disponíveis - instale PySide6-Addons para suporte a gráficos",
+  "auto_refresh": "Atualização Automática (30s)"
 }
