--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -48,6 +48,92 @@
   "whatsapp_business_ready": "WhatsApp Business: Listo",
   "whatsapp_business_settings": "Configuraciones WhatsApp Business API...",
   "whatsapp_content": "Contenido WhatsApp",
+  "outlook_windows_pywin32_required": "pywin32 es requerido para la integración con Outlook en Windows. Por favor instálelo con: pip install pywin32",
+  "outlook_cannot_start": "No se puede iniciar la aplicación Outlook",
+  "outlook_connection_lost": "Se perdió la conexión con Outlook",
+  "outlook_com_error": "Ocurrió un error COM al comunicarse con Outlook",
+  "outlook_version_detected": "Versión de Outlook detectada: {version}",
+  "outlook_capabilities_html": "Formato HTML soportado",
+  "outlook_capabilities_rtf": "Formato RTF soportado",
+  "outlook_capabilities_scheduling": "Programación de emails soportada",
+  "outlook_capabilities_tracking": "Seguimiento de emails soportado",
+  "outlook_profile_current": "Perfil actual: {profile}",
+  "outlook_max_recipients": "Máximo de destinatarios: {count}",
+  "outlook_macos_not_installed": "Microsoft Outlook no está instalado en esta Mac",
+  "outlook_macos_permission_denied": "Permiso de automatización denegado. Por favor otorgue acceso de automatización a CSC-Reach para Microsoft Outlook en Preferencias del Sistema > Privacidad y Seguridad > Automatización",
+  "outlook_macos_automation_permission_required": "Permiso de automatización requerido para integración con Outlook",
+  "email_preview_title": "Vista Previa del Email",
+  "preview_device_type": "Tipo de Dispositivo:",
+  "device_desktop": "Escritorio",
+  "device_tablet": "Tableta",
+  "device_mobile": "Móvil",
+  "email_format": "Formato:",
+  "format_plain_text": "Texto Plano",
+  "format_html": "HTML",
+  "refresh_preview": "Actualizar",
+  "email_information": "Información del Email",
+  "to_address": "Para:",
+  "format": "Formato:",
+  "email_statistics": "Estadísticas",
+  "character_count": "Caracteres:",
+  "word_count": "Palabras:",
+  "estimated_size": "Tamaño:",
+  "attachments": "Adjuntos",
+  "validation_results": "Validación",
+  "plain_text_preview": "Texto Plano",
+  "html_preview": "Vista Previa HTML",
+  "html_source": "Código HTML",
+  "validation_passed": "✓ Email es válido",
+  "email_valid": "Válido",
+  "email_invalid": "Inválido",
+  "create_draft": "Crear Borrador",
+  "send_email": "Enviar Email",
+  "email_analytics_title": "Panel de Análisis de Email",
+  "overview": "Resumen",
+  "campaigns": "Campañas",
+  "performance": "Rendimiento",
+  "recommendations": "Recomendaciones",
+  "date_range": "Rango de Fechas",
+  "from": "Desde:",
+  "to": "Hasta:",
+  "last_7_days": "Últimos 7 Días",
+  "last_30_days": "Últimos 30 Días",
+  "last_90_days": "Últimos 90 Días",
+  "custom_range": "Rango Personalizado",
+  "quick_range": "Rango Rápido:",
+  "refresh_data": "Actualizar Datos",
+  "loading": "Cargando...",
+  "total_emails_sent": "Total de Emails Enviados",
+  "avg_delivery_rate": "Tasa de Entrega Prom.",
+  "avg_open_rate": "Tasa de Apertura Prom.",
+  "avg_click_rate": "Tasa de Clics Prom.",
+  "campaign_name": "Campaña",
+  "sent": "Enviados",
+  "delivered": "Entregados",
+  "opened": "Abiertos",
+  "clicked": "Clicados",
+  "delivery_rate": "Tasa de Entrega",
+  "open_rate": "Tasa de Apertura",
+  "click_rate": "Tasa de Clics",
+  "performance_metrics": "Métricas de Rendimiento",
+  "best_templates": "Mejores Plantillas",
+  "worst_templates": "Peores Plantillas",
+  "trend_analysis": "Análisis de Tendencias",
+  "suggested_actions": "Acciones Sugeridas",
+  "export_report": "Exportar Reporte",
+  "performance_trends": "Tendencias de Rendimiento",
+  "email_status_distribution": "Distribución de Estado de Emails",
+  "bounced": "Rebotados",
+  "performance_over_time": "Rendimiento en el Tiempo",
+  "open_rate_trend": "Tendencia de Tasa de Apertura",
+  "no_recommendations": "No hay recomendaciones específicas en este momento. ¡Sigue así!",
+  "action_check_email_lists": "Revisar y limpiar listas de email para mejorar tasas de entrega",
+  "action_improve_subject_lines": "Probar diferentes líneas de asunto para mejorar tasas de apertura",
+  "action_improve_content": "Mejorar contenido de email y llamadas a la acción para mejorar tasas de clics",
+  "recommendation_improve_delivery_rate": "Considera limpiar tu lista de emails y verificar disparadores de spam para mejorar tasas de entrega",
+  "recommendation_improve_subject_lines": "Prueba hacer A/B testing con diferentes líneas de asunto para mejorar tasas de apertura",
+  "recommendation_improve_content_engagement": "Revisa el contenido del email y agrega llamadas a la acción más atractivas para mejorar tasas de clics",
+  "recommendation_increase_frequency": "Considera aumentar la frecuencia de emails para mantener mejor engagement con tu audiencia",
   "whatsapp_message": "Mensaje WhatsApp:",
   "whatsapp_web": "WhatsApp Web",
   "whatsapp_web_not_configured": "WhatsApp Web: No configurado",
