--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -48,6 +48,92 @@
   "whatsapp_business_ready": "WhatsApp Business: Pronto",
   "whatsapp_business_settings": "Configurações WhatsApp Business API...",
   "whatsapp_content": "Conteúdo WhatsApp",
+  "outlook_windows_pywin32_required": "pywin32 é necessário para integração com Outlook no Windows. Por favor instale com: pip install pywin32",
+  "outlook_cannot_start": "Não é possível iniciar a aplicação Outlook",
+  "outlook_connection_lost": "Conexão com Outlook foi perdida",
+  "outlook_com_error": "Erro COM ocorreu ao comunicar com Outlook",
+  "outlook_version_detected": "Versão do Outlook detectada: {version}",
+  "outlook_capabilities_html": "Formatação HTML suportada",
+  "outlook_capabilities_rtf": "Formatação RTF suportada",
+  "outlook_capabilities_scheduling": "Agendamento de emails suportado",
+  "outlook_capabilities_tracking": "Rastreamento de emails suportado",
+  "outlook_profile_current": "Perfil atual: {profile}",
+  "outlook_max_recipients": "Máximo de destinatários: {count}",
+  "outlook_macos_not_installed": "Microsoft Outlook não está instalado neste Mac",
+  "outlook_macos_permission_denied": "Permissão de automação negada. Por favor conceda acesso de automação ao CSC-Reach para Microsoft Outlook em Preferências do Sistema > Privacidade e Segurança > Automação",
+  "outlook_macos_automation_permission_required": "Permissão de automação necessária para integração com Outlook",
+  "email_preview_title": "Visualização do Email",
+  "preview_device_type": "Tipo de Dispositivo:",
+  "device_desktop": "Desktop",
+  "device_tablet": "Tablet",
+  "device_mobile": "Móvel",
+  "email_format": "Formato:",
+  "format_plain_text": "Texto Simples",
+  "format_html": "HTML",
+  "refresh_preview": "Atualizar",
+  "email_information": "Informações do Email",
+  "to_address": "Para:",
+  "format": "Formato:",
+  "email_statistics": "Estatísticas",
+  "character_count": "Caracteres:",
+  "word_count": "Palavras:",
+  "estimated_size": "Tamanho:",
+  "attachments": "Anexos",
+  "validation_results": "Validação",
+  "plain_text_preview": "Texto Simples",
+  "html_preview": "Visualização HTML",
+  "html_source": "Código HTML",
+  "validation_passed": "✓ Email é válido",
+  "email_valid": "Válido",
+  "email_invalid": "Inválido",
+  "create_draft": "Criar Rascunho",
+  "send_email": "Enviar Email",
+  "email_analytics_title": "Painel de Análise de Email",
+  "overview": "Visão Geral",
+  "campaigns": "Campanhas",
+  "performance": "Desempenho",
+  "recommendations": "Recomendações",
+  "date_range": "Período",
+  "from": "De:",
+  "to": "Até:",
+  "last_7_days": "Últimos 7 Dias",
+  "last_30_days": "Últimos 30 Dias",
+  "last_90_days": "Últimos 90 Dias",
+  "custom_range": "Período Personalizado",
+  "quick_range": "Período Rápido:",
+  "refresh_data": "Atualizar Dados",
+  "loading": "Carregando...",
+  "total_emails_sent": "Total de Emails Enviados",
+  "avg_delivery_rate": "Taxa de Entrega Média",
+  "avg_open_rate": "Taxa de Abertura Média",
+  "avg_click_rate": "Taxa de Cliques Média",
+  "campaign_name": "Campanha",
+  "sent": "Enviados",
+  "delivered": "Entregues",
+  "opened": "Abertos",
+  "clicked": "Clicados",
+  "delivery_rate": "Taxa de Entrega",
+  "open_rate": "Taxa de Abertura",
+  "click_rate": "Taxa de Cliques",
+  "performance_metrics": "Métricas de Desempenho",
+  "best_templates": "Melhores Modelos",
+  "worst_templates": "Piores Modelos",
+  "trend_analysis": "Análise de Tendências",
+  "suggested_actions": "Ações Sugeridas",
+  "export_report": "Exportar Relatório",
+  "performance_trends": "Tendências de Desempenho",
+  "email_status_distribution": "Distribuição de Status de Emails",
+  "bounced": "Rejeitados",
+  "performance_over_time": "Desempenho ao Longo do Tempo",
+  "open_rate_trend": "Tendência da Taxa de Abertura",
+  "no_recommendations": "Nenhuma recomendação específica no momento. Continue o bom trabalho!",
+  "action_check_email_lists": "Revisar e limpar listas de email para melhorar taxas de entrega",
+  "action_improve_subject_lines": "Testar diferentes linhas de assunto para melhorar taxas de abertura",
+  "action_improve_content": "Melhorar conteúdo de email e chamadas para ação para melhorar taxas de cliques",
+  "recommendation_improve_delivery_rate": "Considere limpar sua lista de emails e verificar gatilhos de spam para melhorar taxas de entrega",
+  "recommendation_improve_subject_lines": "Experimente fazer testes A/B com diferentes linhas de assunto para melhorar taxas de abertura",
+  "recommendation_improve_content_engagement": "Revise o conteúdo do email e adicione chamadas para ação mais envolventes para melhorar taxas de cliques",
+  "recommendation_increase_frequency": "Considere aumentar a frequência de emails para manter melhor engajamento com sua audiência",
   "whatsapp_message": "Mensagem WhatsApp:",
   "whatsapp_web": "WhatsApp Web",
   "whatsapp_web_not_configured": "WhatsApp Web: Não configurado",
